--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -1,9 +1,11 @@
 
 <header class="flex items-center justify-between px-8 py-4 text-white bg-gray-800">
-    <div>
-        <h1 class="text-2xl font-bold">TickETCD</h1>
-        <h2 class="text-sm">Consistency in Every Ticket</h2>
-    </div>
+    <a href="/">
+        <div>
+            <h1 class="text-2xl font-bold">TickETCD</h1>
+            <h2 class="text-sm">Consistency in Every Ticket</h2>
+        </div>
+    </a>
     <% if (user && user.username) { %>
         <div class="ml-auto">
             <a href="/profile?username=<%= user.username %>" class="text-blue-300">Welcome, <%= user.username %></a>
