--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,7 +6,7 @@
   <title>TickETCD</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-100 min-h-screen">
 
   <%- include('header.ejs', {user : undefined}) %>
 
