--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,17 +11,8 @@
   <%- include('header.ejs', {user : undefined}) %>
 
   <main class="flex flex-col items-center justify-center py-20">
-    <% if (typeof error_message !== 'undefined' && error_message.length > 0) { %>
-      <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative w-96 mb-4" role="alert">
-        <%= error_message %>
-      </div>
-    <% } %>
-  
-    <% if (typeof success_message !== 'undefined' && success_message.length > 0) { %>
-      <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative w-96 mb-4" role="alert">
-        <%= success_message %>
-      </div>
-    <% } %>
+
+    <%- include('feedback.ejs') %>
   
     <div class="form-container flex flex-col md:flex-row items-stretch justify-center space-y-8 md:space-y-0 md:space-x-8">
       <section id="login" class="flex flex-col items-center flex-1 px-10 py-6">
@@ -58,8 +49,8 @@
     </div>
     
   </main>
-  
 
     <%- include('footer.ejs') %>
+    
 </body>
 </html>
