--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -14,19 +14,19 @@
 
     <%- include('feedback.ejs') %>
 
-    <h2 class="mb-4 text-2xl font-bold">Homepage</h2>
+    <h2 class="mb-4 text-2xl font-bold">Homepage</h2><br>
 
     <form action="/home" method="GET" class="flex items-center mb-4 space-x-4">
-      <input type="text" name="search" placeholder="Search..." value="<%= typeof search !== 'undefined' ? search : '' %>" class="px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:border-blue-500">
-      <select name="type" class="px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:border-blue-500">
-        <option value="all" <%= typeof type !== 'undefined' && type === 'all' ? 'selected' : '' %>>All Event Types</option>
+      <input type="text" name="search" placeholder="Search..." value="<%= typeof search !== 'undefined' ? search : '' %>" class="w-2/5 px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:border-blue-500">
+      <select name="type" class="w-1/5 px-3 py-2 pr-10 border border-gray-300 rounded-md focus:outline-none focus:border-blue-500 appearance-none">
+        <option value="all" <%= typeof type !== 'undefined' && type === 'all' ? 'selected' : '' %>>All Types</option>
         <% if (eventTypes && eventTypes.length > 0) { %>
           <% eventTypes.forEach(eventType => { %>
             <option value="<%= eventType %>" <%= typeof type !== 'undefined' && type === eventType ? 'selected' : '' %>><%= eventType %></option>
           <% }); %>
         <% } %>
       </select>
-      <select name="location" class="px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:border-blue-500">
+      <select name="location" class="w-1/5 px-3 py-2 pr-10 border border-gray-300 rounded-md focus:outline-none focus:border-blue-500 appearance-none">
         <% if (eventLocations && eventLocations.length > 0) { %>
           <% eventLocations.forEach(eventLocation => { %>
             <option value="<%= eventLocation %>" <%= typeof location !== 'undefined' && location === eventLocation ? 'selected' : '' %>><%= eventLocation %></option>
@@ -34,20 +34,31 @@
         <% } %>
         <option value="all" <%= typeof location === 'undefined' || location === 'all' ? 'selected' : '' %>>All Locations</option>
       </select>
-      <button type="submit" class="px-4 py-2 text-white transition duration-300 bg-blue-500 rounded-md hover:bg-blue-600">Search</button>
+      <button type="submit" class="px-4 py-2 min-w-24 text-white transition duration-300 bg-blue-500 rounded-md hover:bg-blue-600 w-1/5">Search</button>
+      <svg class="absolute inset-y-0 right-0 mt-3 mr-4 h-4 w-4 text-gray-400 pointer-events-none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M10 12a1 1 0 0 1-.707-.293l-3-3a1 1 0 1 1 1.414-1.414L10 10.586l2.293-2.293a1 1 0 0 1 1.414 1.414l-3 3A1 1 0 0 1 10 12z"/>
+      </svg>
     </form>
-
-    <% if (events && events.length > 0) { %>
-      <h3 class="mb-2 text-lg font-semibold">Events:</h3>
-      <ul class="list-disc list-inside">
-        <% events.forEach(event => { %>
-          <li><a href="/event?id=<%= event.id %>" class="text-blue-500 hover:underline"><%= event.name %></a></li>
-        <% }); %>
-      </ul>
-    <% } else { %>
-      <p>No events found!</p>
-    <% } %>
-
+    
+    <div class="bg-white rounded-lg shadow-md p-4">
+      <p class="text-lg font-semibold mb-4">Results:</p>
+      
+      <% if (events && events.length > 0) { %>
+        <div class="grid grid-cols-1 gap-4">
+          <% events.forEach(event => { %>
+            <div class="border border-gray-200 rounded-lg hover:border-blue-500 transition duration-300">
+              <a href="/event?id=<%= event.id %>" class="block p-4">
+                <p class="text-blue-500 font-semibold mb-2 truncate"><%= event.name %></p>
+                <p class="text-gray-500 truncate"><%= event.description %></p>
+              </a>
+            </div>
+          <% }); %>
+        </div>
+      <% } else { %>
+        <p class="text-red-500">No events found!</p>
+      <% } %>
+    </div>
+  
   </main>
 
   <%- include('footer.ejs') %>
