--- a/src/views/notifications.ejs
+++ b/src/views/notifications.ejs
@@ -33,7 +33,7 @@
         <% }); %>
       </div>
     <% } else { %>
-      <p>No tickets found!</p>
+      <p>No notifications found!</p>
     <% } %>
     
   </main>
