--- a/src/views/feedback.ejs
+++ b/src/views/feedback.ejs
@@ -1,11 +1,11 @@
 <% if (typeof error_message !== 'undefined' && error_message.length > 0) { %>
-    <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative w-96 mb-4" role="alert">
-      <%= error_message %>
-    </div>
+  <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded-md relative w-96 mb-4 text-center mx-auto max-w-4xl">
+    <%= error_message %>
+  </div>
 <% } %>
 
 <% if (typeof success_message !== 'undefined' && success_message.length > 0) { %>
-    <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative w-96 mb-4" role="alert">
-      <%= success_message %>
-    </div>
+  <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded-md relative w-96 mb-4 text-center mx-auto max-w-4xl">
+    <%= success_message %>
+  </div>
 <% } %>
