--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,45 +10,44 @@
 
   <%- include('header.ejs', {user : undefined}) %>
 
-  <main class="flex flex-col items-center justify-center py-20">
-
+  <main class="flex flex-col items-center justify-center py-10">
     <%- include('feedback.ejs') %>
-  
-    <div class="form-container flex flex-col md:flex-row items-stretch justify-center space-y-8 md:space-y-0 md:space-x-8">
+    
+    <div class="form-container flex flex-col md:flex-row items-start justify-start space-y-8 md:space-y-0 md:space-x-8">
       <section id="login" class="flex flex-col items-center flex-1 px-10 py-6">
         <h2 class="text-lg font-semibold mb-4">Login</h2>
-        <form action="/login" method="POST" class="flex flex-col items-center">
-          <label for="username" class="mb-2">Username:</label>
+        <form action="/login" method="POST" class="flex flex-col items-stretch">
+          <label for="username" class="mb-1">Username:</label>
           <input type="text" id="username" name="username" class="border border-gray-300 rounded-md px-3 py-2 mb-4 focus:outline-none focus:border-blue-500" required>
-    
-          <label for="password" class="mb-2">Password:</label>
+  
+          <label for="password" class="mb-1">Password:</label>
           <input type="password" id="password" name="password" class="border border-gray-300 rounded-md px-3 py-2 mb-4 focus:outline-none focus:border-blue-500" required>
-    
-          <input type="submit" value="Login" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 cursor-pointer transition duration-300">
+  
+          <input type="submit" value="Login" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 cursor-pointer transition duration-300 w-full">
         </form>
       </section>
-    
-      <section id="register" class="flex flex-col items-center flex-1 px-4 py-6">
+  
+      <section id="register" class="flex flex-col items-center flex-1 px-10 py-6">
         <h2 class="text-lg font-semibold mb-4">Register</h2>
-        <form action="/register" method="POST" class="flex flex-col items-center">
-          <label for="name" class="mb-2">Name:</label>
+        <form action="/register" method="POST" class="flex flex-col items-stretch">
+          <label for="name" class="mb-1">Name:</label>
           <input type="text" id="name" name="name" class="border border-gray-300 rounded-md px-3 py-2 mb-4 focus:outline-none focus:border-blue-500" required>
-    
-          <label for="email" class="mb-2">Email:</label>
+  
+          <label for="email" class="mb-1">Email:</label>
           <input type="email" id="email" name="email" class="border border-gray-300 rounded-md px-3 py-2 mb-4 focus:outline-none focus:border-blue-500" required>
-    
-          <label for="username" class="mb-2">Username:</label>
-          <input type="text" id="username" name="username" class="border border-gray-300 rounded-md px-3 py-2 mb-4 focus:outline-none focus:border-blue-500" required>
-    
-          <label for="password" class="mb-2">Password:</label>
-          <input type="password" id="password" name="password" class="border border-gray-300 rounded-md px-3 py-2 mb-4 focus:outline-none focus:border-blue-500" required>
-    
-          <input type="submit" value="Register" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 cursor-pointer transition duration-300">
+  
+          <label for="username_register" class="mb-1">Username:</label>
+          <input type="text" id="username_register" name="username" class="border border-gray-300 rounded-md px-3 py-2 mb-4 focus:outline-none focus:border-blue-500" required>
+  
+          <label for="password_register" class="mb-1">Password:</label>
+          <input type="password" id="password_register" name="password" class="border border-gray-300 rounded-md px-3 py-2 mb-4 focus:outline-none focus:border-blue-500" required>
+  
+          <input type="submit" value="Register" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 cursor-pointer transition duration-300 w-full">
         </form>
       </section>
     </div>
-    
   </main>
+  
 
     <%- include('footer.ejs') %>
     
