Overall code review

--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -8,7 +8,7 @@
     <div class="flex items-center">
         <% if (user && user.username) { %>
             <div class="ml-auto">
-                <a href="/profile?username=<%= user.username %>" class="text-blue-300">Welcome, <%= user.username %></a>
+                <a href="/profile?username=<%= user.username %>" class="text-blue-300">Welcome, <%= user.username %>!</a>
             </div>
             <div class="ml-8">
                 <span class="text-blue-300">|</span>
