--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -6,14 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TickETCD</title>
   <link rel="stylesheet" href="css/style.css">
-  <!-- Include Chart.js library -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body class="bg-gray-100">
 
   <%- include('header.ejs') %>
-
 
     <main class="container mx-auto py-8 px-4">
       <h2 class="text-2xl font-semibold mb-4">Admin Page</h2>
@@ -88,7 +86,6 @@
                           <% } %>
                   </select>
                 </div>
-                <!-- Add other event details fields here -->
               </div>
 
               <div class="space-y-4">
@@ -118,7 +115,6 @@
                 </div>
               </div>
 
-              <!-- Submit Button -->
               <div>
                 <input type="submit" value="Create Event"
                   class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 cursor-pointer transition duration-300">
@@ -132,16 +128,13 @@
 
       <script>
         document.addEventListener('DOMContentLoaded', function () {
-          // Define statistics variable using EJS
-          var statistics = <% - JSON.stringify(statistics) %>; // disclaimer: vs code highlights error but this line works fine
-
-          // JavaScript code to create pie charts
+          var statistics = <% - JSON.stringify(statistics) %>;
           var types = Object.keys(statistics);
           types.forEach(function (type) {
             var ctx = document.getElementById(type + 'Chart').getContext('2d');
-            var dataKeys = Object.keys(statistics[type]).filter(key => key !== 'total'); // Exclude 'total' key
+            var dataKeys = Object.keys(statistics[type]).filter(key => key !== 'total');
             var dataValues = dataKeys.map(key => statistics[type][key]);
-            var total = dataValues.reduce((acc, cur) => acc + cur, 0); // Calculate total
+            var total = dataValues.reduce((acc, cur) => acc + cur, 0); 
             var dataColors = [
               'green',
               'pink',
@@ -151,7 +144,7 @@
             var myChart = new Chart(ctx, {
               type: 'doughnut',
               data: {
-                labels: dataKeys.map((key, index) => `${key}: ${(dataValues[index] / total * 100).toFixed(2)}%`), // Include percentage in the label
+                labels: dataKeys.map((key, index) => `${key}: ${(dataValues[index] / total * 100).toFixed(2)}%`), 
                 datasets: [{
                   label: 'Ticket Sales (USD$)',
                   data: dataValues,
@@ -170,9 +163,5 @@
           });
         });
       </script>
-
-
-
 </body>
-
 </html>
